Closed
Bug 1378095
Opened 8 years ago
Closed 8 years ago
Application window top border edge missing on Windows 10
Categories
(Core :: Graphics: Layers, defect)
Tracking
()
RESOLVED
FIXED
mozilla56
| Tracking | Status | |
|---|---|---|
| firefox56 | --- | fixed |
People
(Reporter: ke5trel, Assigned: dvander)
References
Details
Attachments
(3 files)
|
62.57 KB,
image/png
|
Details | |
|
14.64 KB,
patch
|
mattwoodrow
:
review+
|
Details | Diff | Splinter Review |
|
7.66 KB,
patch
|
mattwoodrow
:
review+
|
Details | Diff | Splinter Review |
The Photon mockups show that the application window should have a native top border edge accent color but the current Nightly does not have one.
Updated•8 years ago
|
Whiteboard: [photon-visual] → [photon-visual] [triage]
Severity: normal → trivial
Status: UNCONFIRMED → NEW
Ever confirmed: true
Can no longer reproduce in today's 2017-07-04 build. No bug was fixed for it specifically. Can anyone confirm?
Yes, no longer reproduce in today's 2017-07-04 build.
per https://developer.mozilla.org/en-US/docs/Mozilla/Bugzilla/What_to_do_and_what_not_to_do_in_Bugzilla#Resolving_bugs_as_WORKSFORME
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → WORKSFORME
Updated•8 years ago
|
Whiteboard: [photon-visual] [triage]
It disappeared again on today's 2017-07-11 build.
Status: RESOLVED → REOPENED
Resolution: WORKSFORME → ---
Whiteboard: [photon-visual] [triage]
Regressed by Bug 1375743. Fixed by setting layers.mlgpu.dev-enabled = false.
Blocks: 1375743
Comment 5•8 years ago
|
||
Ni per comment #4 - dvander, could you take a look?
Flags: needinfo?(dvander)
| Assignee | ||
Comment 6•8 years ago
|
||
Thanks, I can reproduce this. It looks like AL is failing to force a clear of the non-client area, which the old compositor does. This should be easy to fix.
Assignee: nobody → dvander
Status: REOPENED → ASSIGNED
Flags: needinfo?(dvander)
| Assignee | ||
Comment 7•8 years ago
|
||
We have two different regions to clear: the area not covered by opaque pixels, and the area that must be clear after rendering is finished.
This patch refactors the clear code in RenderViewMLGPU so it can be re-used for separate draw calls. The only reason this code exists to begin with is so we can use ClearView if it's available, since it's much faster. And unfortunately the inputs to ClearView are totally different versus the clear shader.
Attachment #8885609 -
Flags: review?(matt.woodrow)
| Assignee | ||
Comment 8•8 years ago
|
||
This renames the existing clear operation to a "pre-clear" and the new clear operation is a "post-clear". The post-clear region is clamped to the invalid area, and is added to the initial opaque area.
Attachment #8885611 -
Flags: review?(matt.woodrow)
Updated•8 years ago
|
Component: Theme → Graphics: Layers
Product: Firefox → Core
Whiteboard: [photon-visual] [triage]
Updated•8 years ago
|
Attachment #8885609 -
Flags: review?(matt.woodrow) → review+
Updated•8 years ago
|
Attachment #8885611 -
Flags: review?(matt.woodrow) → review+
Pushed by danderson@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/59d05f6cda7a
Add a helper for automating ClearView and clear-shader operations. (bug 1378095 part 1, r=mattwoodrow)
https://hg.mozilla.org/integration/mozilla-inbound/rev/cec67bb0c301
Fix Advanced Layers not forcing a clear for the window theme. (bug 1378095 part 2, r=mattwoodrow)
Comment 10•8 years ago
|
||
| bugherder | ||
https://hg.mozilla.org/mozilla-central/rev/59d05f6cda7a
https://hg.mozilla.org/mozilla-central/rev/cec67bb0c301
Status: ASSIGNED → RESOLVED
Closed: 8 years ago → 8 years ago
status-firefox56:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla56
You need to log in
before you can comment on or make changes to this bug.
Description
•