Add a helper for automating ClearView and clear-shader operations. (bug 1378095 part 1, r=mattwoodrow)